[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Scripts/MatryoshkaBullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/cucumber_smol.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 8 )

[node name="MatryoshkaBullet" type="Area2D" groups=["enemy", "matryoshka"]]
collision_mask = 0
script = ExtResource( 1 )
lifespan_wait_time = 10

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.541176, 0.00784314, 1 )
rotation = 0.785397
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -9.53674e-07 )
scale = Vector2( 1.9, 1.9 )

[node name="Lifespan" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_MatryoshkaBullet_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
